Part-II/Lox-Grammar-Rules.txt
STATEMENTS:
------------
program     -> declaration* EOF ;

declaration -> funDecl | varDecl | statement ;

funDecl     -> "fun" function ;

function    -> IDENTIFIER "(" parameters? ")" block ;

parameters  -> IDENTIFIER ( "," IDENTIFIER )* ;

varDecl     -> "var" IDENTIFIER ( "=" expression )? ";" ;

statement   -> exprStmt | forStmt | ifStmt | printStmt | returnStmt | whileStmt | block ;

exprStmt    -> expression ";" ;

forStmt     -> "for" "(" ( varDecl | exprStmt | ";" )
               expression? ";"
               expression? ")" statement ;

whileStmt   -> "while" "(" expression ")" statement ;

printStmt   -> "print" expression ";" ;

returnStmt  -> "return" expression? ";" ;

ifStmt      -> "if" "(" expression ")" statement
               ( "else" statement )? ;

block       -> "{" declaration "}" ;





EXPRESSIONS:
------------
expression  -> assignment ( "," expression )* ;

assignment  -> IDENTIFIER ( "=" | "+=" | "-=" | "*=" | "/=" ) assignment
               | ternary ;

ternary     -> logic_or ( "?" expression ":" expression )? ;

logic_or    -> logic_and ( "or" logic_and )* ;

logic_and   -> equality ( "and" equality )* ;

equality    -> comparison ( ( "!=" | "==" ) comparison )* ;

comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term        -> factor ( ( "-" | "+" ) factor )* ;

factor      -> unary ( ( "/" | "*" ) unary )*;

unary       -> ( "!" | "-" ) unary
               | call ;

call        -> primary ( "(" arguments? ")" )* ;        [ arguments -> expression ( "," expression )* ]

primary     -> NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" | IDENTIFIER ;
